feat: se agrega numero de whatsapp

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,5 @@
 <footer>
   <div class="footer-top">
-
     <!-- Brand column -->
     <div class="footer-brand">
       <div class="footer-logo">
@@ -11,8 +10,8 @@
         </div>
       </div>
       <p class="footer-desc">
-        El lugar donde el estilo masculino se convierte en arte. Más de 9 años transformando
-        hombres en Corrientes, Argentina.
+        El lugar donde el estilo masculino se convierte en arte. Más de 9 años
+        transformando hombres en Corrientes, Argentina.
       </p>
       <div class="footer-social">
         <a
@@ -51,19 +50,44 @@
     <div class="footer-col">
       <h4>Contacto</h4>
       <ul class="footer-links">
-        <li><a href="https://wa.me/5493794000000" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp</a></li>
-        <li><a href="https://www.instagram.com/eldatobarbershop" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
-        <li><a href="https://www.facebook.com/eldatobarbershop" target="_blank"><i class="fab fa-facebook-f"></i> Facebook</a></li>
-        <li><a href="https://www.tiktok.com/@eldatobarbershop" target="_blank"><i class="fab fa-tiktok"></i> TikTok</a></li>
-        <li><a href="mailto:eldato@barbershop.com"><i class="fa-solid fa-envelope"></i> Email</a></li>
-        <li><a href="#"><i class="fa-solid fa-location-dot"></i> Corrientes, Arg.</a></li>
+        <li>
+          <a href="https://wa.me/5493794716331" target="_blank"
+            ><i class="fab fa-whatsapp"></i> WhatsApp</a
+          >
+        </li>
+        <li>
+          <a href="https://www.instagram.com/eldatobarbershop" target="_blank"
+            ><i class="fab fa-instagram"></i> Instagram</a
+          >
+        </li>
+        <li>
+          <a href="https://www.facebook.com/eldatobarbershop" target="_blank"
+            ><i class="fab fa-facebook-f"></i> Facebook</a
+          >
+        </li>
+        <li>
+          <a href="https://www.tiktok.com/@eldatobarbershop" target="_blank"
+            ><i class="fab fa-tiktok"></i> TikTok</a
+          >
+        </li>
+        <li>
+          <a href="mailto:eldato@barbershop.com"
+            ><i class="fa-solid fa-envelope"></i> Email</a
+          >
+        </li>
+        <li>
+          <a href="#"
+            ><i class="fa-solid fa-location-dot"></i> Corrientes, Arg.</a
+          >
+        </li>
       </ul>
     </div>
   </div>
 
   <div class="footer-bottom">
     <div class="footer-copy">
-      © {{ currentYear }} <span>El Dato Barbershop</span>. Todos los derechos reservados.
+      © {{ currentYear }} <span>El Dato Barbershop</span>. Todos los derechos
+      reservados.
     </div>
     <div class="footer-legal">
       <a href="#">Política de Privacidad</a>
